Add custom DatePicker component for improved calendar styling and user experience

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,6 +6,7 @@
     "to": "To",
     "chooseDest": "Choose destination",
     "selectTime": "Select time",
+    "selectDate": "Select date",
     "departureDate": "Departure Date",
     "departureTime": "Departure Time",
     "returnTrip": "Return Trip",
